--- a/css/style.css
+++ b/css/style.css
@@ -554,6 +554,88 @@ img {
 .footer-soc-link:focus .footer-soc-icon {
   fill: var(--background-color);
 }
+.footer-thumb {
+  width: 570px;
+  margin-left: 93px;
+}
+.footer-form {
+  display: flex;
+}
+
+.foooter-form-icon {
+  position: absolute;
+  top: 50%;
+  right: 14%;
+  transform: translateY(-50%);
+  fill: var(--background-color);
+}
+.form-text {
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--background-color);
+}
+
+.footer-input {
+  margin-right: 12px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background: #2f303a;
+  padding-left: 16px;
+  outline: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-input:focus {
+  border-color: var(--accent-color);
+}
+.footer-input::placeholder {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  background-color: transparent;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+.footer-btn {
+  padding-left: 28px;
+  padding-right: 62px;
+  padding-top: 0;
+  padding-bottom: 0;
+  margin: 0;
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 200px;
+  height: 50px;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border-color: var(--accent-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-btn:focus,
+.footer-btn:hover {
+  background-color: #188ce8;
+}
 .backdrop {
   position: fixed;
   top: 0;
@@ -723,10 +805,9 @@ img {
   color: var(--accent-color);
 }
 .modal-btn {
-  display: inline-block;
   margin-right: 164px;
   margin-left: 164px;
-  padding-bottom: 40px;
+
   border-radius: 4px;
   padding: 10px 52px;
   color: var(--background-color);
