--- a/css/style.css
+++ b/css/style.css
@@ -573,7 +573,7 @@ img {
   margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--background-color);
@@ -610,17 +610,17 @@ img {
   color: rgba(255, 255, 255, 0.6);
 }
 .footer-btn {
+  position: relative;
+  display: flex;
   padding-left: 28px;
   padding-right: 62px;
   padding-top: 0;
   padding-bottom: 0;
   margin: 0;
-  position: relative;
-  display: flex;
   align-items: center;
   width: 200px;
   height: 50px;
-  background: #2196f3;
+  background: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border-color: var(--accent-color);
